2008-02-16  Neal H. Walfield  <neal@gnu.org>

	* process-spawn.c (process_spawn) [RM_INTERN]: Don't take
	LRU_LOCK.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* assert.h (assertx): Improve printing of backtrace.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* ia32-cmain.c (cmain): Update user of _pthread_init_routine to
	reflect API change.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* process-spawn.h: New file.
	* process-spawn.c: New file.
	* Makefile.am (common_sources): Add process-spawn.h and
	process-spawn.c.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* loader.h (loader_allocate_object_callback_t): Add parameter ro.
	* loader.c (loader_elf_load): When calling ALLOC, pass whether or
	not the page should be mapped read-only to the callback.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* ia32-cmain.c (program_name): Change type to char *.
	* t-setjmp.c (program_name): Likewise.
	* assert.h (assertx): Change program_name's type to char *.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* ia32-crt0.S (_start): Clear EBP before jumping to cmain.

	* backtrace.c (backtrace): Limit to 21 stack frames.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* backtrace.c (RA): Return if __builtin_frame_address returns 0.
	Correctly assign the return address to the appropriate slot in
	ARRAY.
	(backtrace): Limit to four stack frames.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* _exit.c (_exit): Destroy the activity by finding its associated
	storage and deallocating that.  If killing the activity fails, try
	the same approach with the thread.

2008-02-08  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.am (routines, routines_subexp, routines_objects)
	(routines_varname, $(routines_objects)): Remove.  Partially moved to
	newlib.

2008-02-05  Neal H. Walfield  <neal@gnu.org>

	* errno.h: Protect from multiple inclusion.  Don't include the
	next errno.h.  Include <hurd/error.h>.
	(errno): Don't undef.
	(error_t): Define.
